# watchagent-weather-monitor

.github/workflows/: ci.yml
watchagent/: .env.example  .gitignore  Dockerfile.api  Dockerfile.poller  README.md  dev.db  docker-compose.yml  pyproject.toml
watchagent/.cursor/agents/: event_detection_reviewer.md  session_log.md  threshold_calibrator.md
watchagent/.cursor/rules/: event_schema.mdc  logging.mdc  repository.mdc
watchagent/.cursor/skills/: README.md  data_analysis.py  replay_detection.py
watchagent/app/: config.py  database.py  poller_main.py
watchagent/app/api/: main.py
watchagent/app/api/routes/: __init__.py  events.py  health.py  readings.py
watchagent/app/models/: __init__.py  event.py  reading.py
watchagent/app/repositories/: __init__.py  event_repo.py  reading_repo.py
watchagent/app/schemas/: __init__.py  event.py  reading.py
watchagent/app/services/: __init__.py  event_detector.py  poller.py  weather_client.py
watchagent/tests/: conftest.py  test_api.py  test_deduplication.py  test_event_detection.py  test_poller.py  test_weather_client.py
