[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "watchagent"
version = "0.1.0"
description = "Weather monitoring agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic-settings",
    "httpx",
    "tenacity",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# ResourceWarning from SQLAlchemy/tenacity connection-pool threads are
# third-party internals, not application bugs.  Suppress to keep CI output clean.
filterwarnings = ["ignore::ResourceWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
